# gym-schem

./: README.md  pyproject.toml  requirements.txt
gym_schem/: __init__.py  __main__.py
gym_schem/envs/: __init__.py  schem_env.py
gym_schem/utils/: human_scores.py
gym_schem/wrappers/: __init__.py  flatten_action.py
