[build-system]
requires = ["setuptools >= 61.0.0",
            "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gym_schem"
description = "ML env simulating the puzzle game SpaceChem."
readme = "README.md"
requires-python = ">= 3.7"
authors = [{ name = "Zig", email = "junknenopok@gmail.com" }]
license = { text = "MIT License" }
classifiers = ["License :: OSI Approved :: MIT License",
               "Programming Language :: Python :: 3",
               "Intended Audience :: Science/Research",
               "Topic :: Scientific/Engineering :: Artificial Intelligence",
               "Operating System :: OS Independent"]
# Per https://packaging.python.org/en/latest/guides/single-sourcing-package-version/
# and https://stackoverflow.com/a/73600610/8321410
dynamic = ["dependencies", "version"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
version = {attr = "package.__version__"}
